# polyfy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
polyfy/: __init__.py  creation.py  io.py  util.py
tests/: test_polygonise.py  test_util.py
