[project]
name = "polyfy"
dynamic = ["version"]
authors = [{ name = "Met Office" }]
license = { text = "BSD-3-Clause" }
dependencies = [
    "fiona",
    "numpy",
    "pytest",
    "scipy",
    "scitools-iris",
    "shapely",
    "ruff",
]

[build-system]
requires = ["setuptools >= 66.0", "setuptools-scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["polyfy*"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
